Ensure consecutive whitespace is not truncated in output log

--- a/src/css/plain.css
+++ b/src/css/plain.css
@@ -315,7 +315,8 @@ footer {
 #output-log, #register-log {
     padding: 0.5em 1em;
     text-align: right;
-	font-family: sans-serif;
+    font-family: sans-serif;
+    white-space: pre;
 }
 
 #input-list-type {
